--- a/index.html
+++ b/index.html
@@ -5,18 +5,36 @@
     </head>
 
     <body>
-        <div id="header">
+        <header>
             <h1>SCRYING</h1>
-        </div>
+            <p class="quote">"You didn't think you could guess everything about me at a glance, did you?"</p>
 
-        <div id="content">
-            <div class="quote">
-                <p>"You didn't think you could guess everything about me at a glance, did you?"</p>
-            </div>
+            <nav>
+                <ul>
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#">Characters</a></li>
+                    <li><a href="#">Groups</a></li>
+                    <li><a href="#">Game Systems</a></li>
+                </ul>
+            </nav>
+        </header>
 
+        <main>
             <div>
                 <img class="profile" src="Assets/alba.jpeg" title="Alba, the French-Canadian vampire from Los Angeles." />
             </div>
-        </div>
+
+            <div class="add">
+                <form>
+                    <label for="fname">New Character</label><br/>
+                    <input type="text">
+                    <input type="button" value="Submit">
+                </form>
+            </div>
+        </main>
+
+        <footer>
+            <p>&copy;2023 Oceane C.</p>
+        </footer>
     </body>
 </html>
